57.2 Fix z-index problem

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -40,18 +40,19 @@ height: calc(100% - 60px);
 background: theme('colors.gray-background');
 }
 
-.is-admin::before {
-width: 38px;
-height: 38px;
-border-radius: 38px;
-border: 7px solid white;
-box-shadow: 4px 4px 15px 0 rgba(36, 37,38, .08);
-left: -58px;
-background: theme('colors.purple');
-opacity: 1;
+.is-status-update::before {
+    width: 38px;
+    height: 38px;
+    border-radius: 38px;
+    border: 7px solid white;
+    box-shadow: 4px 4px 15px 0 rgba(36, 37,38, .08);
+    left: -58px;
+    background: theme('colors.purple');
+    opacity: 1;
+    z-index: 1;
 }
 
-.is-admin {
+.is-status-update {
     border-width: 1px;
     border-image-source: linear-gradient(266deg, #21c8f6 98%, #637bff -52%);
     border-image-slice: 1;
